--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <div id="contact-window" class="contact-window">
         <div class="contact-template">
           <h2>Contact Info</h2>
-          <p>Email: <a href="mailto:smokeydesigns@gmail.com">smokeydesigns@gmail.com</a></p>
+          <p>Email: <a href="mailto:smokeydesignsgr@gmail.com">smokeydesigns@gmail.com</a></p>
         </div>
       </div>
       <script src="script.js"></script>
