--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
         <p>
             My name is Konstantinos and I am an undergraduate student at the University of West Attica. My passion is to develop software programs,
             whether it is a website, a game or a script in general. I am always willing to learn more and expand my horizons when it comes to programming and technology.
-            I have experience in C++, Python, HTML, CSS, JavaScript, Databases and now my goal now
+            I have experience in C++, Python, HTML, CSS, JavaScript, Databases and my goal now
             is to develop an interactive game for my diploma. Thank you for taking the time to visit my portofolio. If you want to contact me or acquire
-            my services, do not hesitate to contact me by pressing on the button on the top of this page. Once again, thank you. 
+            my services, do not hesitate by pressing the button on the top of this page. Once again, thank you. 
         </p>
         </div>
     </section>
